# LibTorchExample

./: .gitignore  CMakeLists.txt  README.md
src/: TorchInference.cpp  TorchInference.h
tests/: test_inference.cpp
utils/: convertModel.py
